--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ conecte vercel
 <details><summary>presentacion</summary><div>
     <div id=presentacion></div>
 Jeronimo Sequeiros
-<ul><li>Presentacion</li></ul>
+<ul><li> class="Presentacion" Presentacion</li></ul>
 soy de Trenque Lauquen <br>
 tengo 20 años <br>
 me gusta el campo <br>
