--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ en mi tiempo libre disfruto de leer, escuchar musica o cocinar
 
 <ul>Llega al club en 2014</ul> 
 
-<table> Finales jugadas 
+<table> Finales jugadas river plate 2022 
     
     <tr><th>TORNEO</th> <th>AÑO</th> <th>POSICIÓN</th> </tr>
     <tr><td>Sudamericana</td><td>2014</td><td>Primero</td></tr>
