--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ en mi tiempo libre disfruto de leer, escuchar musica o cocinar
     <tr><td>Mundial de clubes</td><td>2015</td><td>Segundo</td></tr>
     <tr><td>Recopa Sudamericana</td><td>2015</td><td>Primero</td></tr>
     <tr><td>Copa Argentina</td><td>2016</td><td>Primero</td></tr>
-    <tr><td>Supercopa Argentina</td><td>2017</td><td>Segundo</td>/tr>
+    <tr><td>Supercopa Argentina</td><td>2017</td><td>Segundo</td></tr>
     <tr><td>Copa Argentina</td><td>2017</td><td>Primero</td></tr>
     <tr><td>Supercopa Argentina</td><td>2017</td><td>Primero</td></tr>
     <tr><td>Libertadores</td><td>2018</td><td>Primero</td></tr>
