--- a/Clase 3/index.html
+++ b/Clase 3/index.html
@@ -7,7 +7,8 @@
     <title>Clase 3</title>
 </head>
 <body>
-   
+   para los colores: RGB (#RRGGBB). Toma valores del 0 a la F. <br>
+para id --> 
 
 </body>
 </html>
