--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Programacion Web/Jeronimo Sequeiros</title>
 </head>
 <body>
+    <link rel="stylesheet" href="styles.css">
     <h1> by Jeronimo Sequeiros</h1>
     <details><summary>pagina de prueba</summary>
 pagina de prueba, busco hacer andar git, github y vercel
@@ -33,7 +34,7 @@ en mi tiempo libre disfruto de leer, escuchar musica o cocinar
 
 <ul>Llega al club en 2014</ul> 
 
-<table> Finales jugadas river plate 2022 padre del club Boca juniors
+<table> Finales jugadas 
     
     <tr><th>TORNEO</th> <th>AÑO</th> <th>POSICIÓN</th> </tr>
     <tr><td>Sudamericana</td><td>2014</td><td>Primero</td></tr>
