--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>Programacion Web/Jeronimo Sequeiros</title>
 </head>
 <body>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <br>
+
     <h1> by Jeronimo Sequeiros</h1>
-    <details><summary>pagina de prueba</summary>
+    <details><summary>Página de prueba</summary>
 pagina de prueba, busco hacer andar git, github y vercel
 uso del preview index <br>
 git y github <br>
 conecte vercel
 </details> <br>
 
-<details><summary>presentacion</summary><div>
+<details><summary>Presentación</summary><div>
     <div id=presentacion></div>
 Jeronimo Sequeiros
 <ul><li> class="Presentacion" Presentacion</li></ul>
