--- a/index.html
+++ b/index.html
@@ -9,27 +9,8 @@
 <body>
     <link rel="stylesheet" href="styles.css"> <br>
 
-    <h1> by Jeronimo Sequeiros</h1>
-    <details><summary>Página de prueba</summary>
-pagina de prueba, busco hacer andar git, github y vercel
-uso del preview index <br>
-git y github <br>
-conecte vercel
-</details> <br>
-
-<details><summary>Presentación</summary><div>
-    <div id=presentacion></div>
-Jeronimo Sequeiros
-<ul><li> class="Presentacion" Presentacion</li></ul>
-soy de Trenque Lauquen <br>
-tengo 20 años <br>
-me gusta el campo <br>
-hincha de River <br>
-en mi tiempo libre disfruto de leer, escuchar musica o cocinar
-</details>
-
-<!--esto va a ser un comentario que no se ve en la web-->   
- <h2>Marcelo Gallardo</h2>
+    <!--esto va a ser un comentario que no se ve en la web-->   
+ <h1>Marcelo Gallardo</h1>
  RIVER PLATE
 <img src="images/gallardo.jpg" alt="">
 
@@ -59,6 +40,24 @@ en mi tiempo libre disfruto de leer, escuchar musica o cocinar
 
 </table>
 
+by Jeronimo Sequeiros
+<details><summary>Página de prueba</summary>
+pagina de prueba, busco hacer andar git, github y vercel
+uso del preview index <br>
+git y github <br>
+conecte vercel
+</details> <br>
+
+<details><summary>Presentación</summary><div>
+<div id=presentacion></div>
+Jeronimo Sequeiros
+<ul><li> class="Presentacion" Presentacion</li></ul>
+soy de Trenque Lauquen <br>
+tengo 20 años <br>
+me gusta el campo <br>
+hincha de River <br>
+en mi tiempo libre disfruto de leer, escuchar musica o cocinar
+</details>
 
 </body>
 </html>
