--- a/Clase 3/index.html
+++ b/Clase 3/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    para los colores: RGB (#RRGGBB). Toma valores del 0 a la F. <br>
-para id --> 
+para id --> id= #id 
 
 </body>
 </html>
