--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--esto va a ser un comentario que no se ve en la web-->   
  <h1>Marcelo Gallardo</h1>
  RIVER PLATE
-<img src="images/gallardo.jpg" alt="">
+<div id="fotobody"></div><img src="images/gallardo.jpg" alt="">
 
 <ul>Llega al club en 2014</ul> 
 
