--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
  <h1>Marcelo Gallardo</h1>
  RIVER PLATE
 <div id="fotobody"></div><img src="images/gallardo.jpg" alt="">
+<a href=""></a>
 
-<ul>Llega al club en 2014</ul> 
+llega al club en 2014 
 
-<table> Finales jugadas 
+<div id="tabla1"><table> Finales jugadas </div>
     
     <tr><th>TORNEO</th> <th>AÑO</th> <th>POSICIÓN</th> </tr>
     <tr><td>Sudamericana</td><td>2014</td><td>Primero</td></tr>
