--- a/Clase 1/Clase 1.html
+++ b/Clase 1/Clase 1.html
@@ -8,8 +8,31 @@
 </head>
 <body>
   <!--esto va a ser un comentario que no se ve en la web-->   
+   
   <h1>MARCELO Gallardo</h1>
   RIVER PLATE <br> Jeronimo Sequeiros
  <h3></h3> <img src="images/gallardo.jpg" alt="">
+
+ by Jeronimo Sequeiros
+<details><summary>Página de prueba</summary>
+pagina de prueba, busco hacer andar git, github y vercel
+uso del preview index <br>
+git y github <br>
+conecte vercel
+</details> <br>
+
+<details><summary>Presentación</summary><div>
+<div id=presentacion></div>
+Jeronimo Sequeiros
+<ul><li> class="Presentacion" Presentación</li></ul>
+soy de Trenque Lauquen <br>
+tengo 20 años <br>
+me gusta el campo <br>
+hincha de River <br>
+en mi tiempo libre disfruto de leer, escuchar musica o cocinar
+</details>
+
+</body>
+</html>
 </body>
 </html>
