--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
 <body>
     <link rel="stylesheet" href="styles.css"> <br>
 
-    <!--esto va a ser un comentario que no se ve en la web-->   
+   
  <h1>Marcelo Gallardo</h1>
- RIVER PLATE
+ <h2>RIVER PLATE</h2>
 <div id="fotobody"></div><img src="images/gallardo.jpg" alt="">
-<a href=""></a>
 
-llega al club en 2014 
+<details><summary>Datos personales</summary>
+<ul><li>Marcelo Daniel Gallardo</li>
+<li>Nació en Merlo, Buenos Aires el 18 de Enero de 1976</li>
+</ul></details>
+
+<p1><ul>DEBUT COMO JUGADOR<li>Debutó en la prenovena en 1988</li>
+<li>En 1993 debuta en primera divisón</li>
+<li>11 de Diciembre de 1994 le anotó su primer gol a Boca Juniors</li>
+<li>Tuvo tres etapas en el club de Nuñez como jugador (1993-1999) (2003-2006) (2009-2010)</li>
+<li>Como jugador del club disputó 305 partidos y convirtió 70 goles</li>
+<li>En 2014 tiene su debut como entrenador de River </li></ul></p1>
+
+ <div id="goles"><p2>Estos son los mejores goles de Marcelo en River <a href="https://www.youtube.com/watch?v=UZXB6YVCSbA"> Goles Gallardo</a></p2></div>  <br>
+
+llega al club en 2014 como entrenador
 
 <div id="tabla1"><table> Finales jugadas </div>
     
@@ -41,24 +54,3 @@ llega al club en 2014
 
 </table>
 
-by Jeronimo Sequeiros
-<details><summary>Página de prueba</summary>
-pagina de prueba, busco hacer andar git, github y vercel
-uso del preview index <br>
-git y github <br>
-conecte vercel
-</details> <br>
-
-<details><summary>Presentación</summary><div>
-<div id=presentacion></div>
-Jeronimo Sequeiros
-<ul><li> class="Presentacion" Presentacion</li></ul>
-soy de Trenque Lauquen <br>
-tengo 20 años <br>
-me gusta el campo <br>
-hincha de River <br>
-en mi tiempo libre disfruto de leer, escuchar musica o cocinar
-</details>
-
-</body>
-</html>
