--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="styles.css"> <br>
 
    
- <h1>Marcelo Gallardo</h1>
+ <h1> Marcelo Gallardo</h1>
  <h2>RIVER PLATE</h2>
-<div id="fotobody"></div><img src="images/gallardo.jpg" alt="">
+
+<img id="fotoperfil" src="./images/gallardo.jpg" alt="marcelo gallardo">
 
 <details><summary>Datos personales</summary>
 <ul><li>Marcelo Daniel Gallardo</li>
@@ -54,3 +55,5 @@ llega al club en 2014 como entrenador
 
 </table>
 
+<a href="mailto:jsequeiros@itba.edu.ar">
+<img src="./images/envelope-solid.svg" id="icono-contacto" alt=""></a> 
