--- a/Clase 5/index5.html
+++ b/Clase 5/index5.html
@@ -20,9 +20,9 @@
 </header>
 
 <body>
-     <div class="container">
-        <div class="row">
-          <div class="col-8">
+     <div class="container-fluid">
+        <div class="row" id="fila1">
+          <div class="col-8" id="columna1">
     <img src="http://via.placeholder.com/400x150" id="foto1" alt="">
             </div>
      
