--- a/Raiz Nomada/indexRN.html
+++ b/Raiz Nomada/indexRN.html
@@ -20,15 +20,22 @@
      </menu>
     </header>
 
-
     <h1> Raíz Nómada</h1>
     <h2>by Margarita Sequeiros</h2>
 
-
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
     <h3>R A Í Z N Ó M A D A ⁣🌿</h3>
 
 <ul><li> Materiales nobles que aportan calidez a vos y tus espacios</li>
-<li> Artesanias Correntinas</li></ul>
+<li> Artesanias Correntinas</li></ul></div> 
+
+<div class="col">
+<img id="foto-inicio" src="./artesanias.jpg" alt=""> <br>
+Curuzu Cuatiá
+
+</div></div></div>
 
 <div class="container">
     <div class="row">
@@ -64,31 +71,9 @@ Las mismas, son el fruto de largas jornadas de trabajo destinadas a que lleguen 
 
           <div class="col"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus exercitationem enim dignissimos natus rem placeat dolorum facere, obcaecati deserunt accusamus voluptas veritatis! Reiciendis hic quisquam adipisci et illo ullam esse!</div></div></div>
 
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, atque, repellendus nesciunt at soluta hic iste praesentium reprehenderit iusto aut maiores eaque ab in. Culpa doloribus voluptatibus rem optio amet? <br>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis ex alias officiis delectus. Ratione eaque non ducimus rerum suscipit tenetur, soluta aut dolorem, ad vel, voluptatibus impedit deleniti vero necessitatibus. <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam fuga deleniti id. Labore, dolore quis facere, dolorum quasi voluptate consequatur modi blanditiis deserunt, fuga consequuntur. Quisquam tempora aperiam eaque eius? <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci possimus incidunt illo quam quae facilis ullam ipsam illum, quidem magni minus maxime autem laborum modi? Aspernatur sapiente magnam laudantium? <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sed voluptate eaque soluta ad iusto excepturi repellat et, magni reiciendis, totam ullam dolores repudiandae nesciunt maiores, magnam tempora dignissimos consequuntur! <br> 
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus voluptate soluta perferendis eos sequi enim quia omnis eius aperiam, velit officiis vitae quibusdam dolorum odit tempore et quisquam inventore. Dignissimos. <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex commodi modi quam eius dolorem id ipsa amet. Quasi possimus, quo, ipsum error nemo beatae minima ducimus pariatur similique ipsa ratione? <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod odit dolores fugiat sapiente optio numquam deleniti veritatis perspiciatis cumque soluta ullam vitae facilis nesciunt error voluptatem dolorem porro, modi ipsum. <br>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita eaque sunt sequi accusantium provident quod est pariatur harum nesciunt impedit optio quae aut aliquid esse, fuga sed rerum eum eius. <br>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ipsam nisi vel minima et ratione aliquid ipsum. Quas itaque unde deleniti perspiciatis sint aperiam totam nisi. Placeat eius reiciendis libero! <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, commodi ducimus eveniet nisi nihil eos iste hic minima perspiciatis, delectus est distinctio obcaecati ullam, earum aspernatur eum incidunt fugiat quis? <br>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore amet itaque adipisci accusamus corrupti omnis? Esse corrupti ratione facere enim cumque a? Vero quasi perspiciatis maiores ad sequi deserunt. Atque! <br> 
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, illo atque culpa alias deserunt suscipit ratione quasi quam ipsa molestias, quaerat ipsam, est vero. Vero eos consectetur fuga dicta facilis. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores aut placeat odio architecto cupiditate, in nisi adipisci laudantium animi eius ipsam laboriosam error amet impedit blanditiis soluta asperiores, explicabo magni. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quam ab, tempore necessitatibus perspiciatis voluptas commodi ea odit asperiores dolores vitae enim, tempora quos animi sit vel dicta repellat fugiat? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem alias quas molestiae corporis voluptates facere vitae enim tempora nesciunt sequi ut consequatur esse, aperiam, vel ab dicta distinctio, aut recusandae. <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa illum, dicta amet veritatis nesciunt sit dolor hic dignissimos eveniet doloremque obcaecati neque deleniti nostrum blanditiis quos. Ex id similique error! 
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum molestias dignissimos adipisci reiciendis ab accusantium corporis fuga consectetur ad dolores laboriosam consequatur dolorum veniam doloribus tempora, voluptate iste? Aspernatur, qui! <br>
-
-    <a href="https//wa.me/+5492392518763">
-        <img src="./logo whatsapp.svg" id="icono-contacto" alt=""></a>
+          <a href=" https://wa.me/+5492392518763?text=Hola,+quiero+ver+la+lista+de+precios">
+              <img src="./logo whatsapp.svg" id="icono-contacto" alt=""></a>
+   
 
 </body>
 </html>
