--- a/Raiz Nomada/indexRN.html
+++ b/Raiz Nomada/indexRN.html
@@ -23,7 +23,9 @@
     </header>
 </head>
 
-     <br> <br> 
+<script src="main.js"></script>
+
+    <br> <br> 
 
     <h1> RAÍZ NÓMADA </h1>
     
@@ -62,11 +64,17 @@
 
    <div class= "container">
     <div class="row">
-         <div class="col-6">
+        <div id="productos" class="col-6">
             <h1 id="modelodecaja2">Productos RN</h1> <br> <br>
             <h6>Materiales nobles que aportan calidez a vos y tus espacios <br>
             Artesanias Correntinas</h6>
-        </div>
+
+            <input  type="button"
+            onclick="HacerAparecer()"
+            value="Descripción">
+         </div>
+
+         
 
 </div> </div> </div>
 
