--- a/Raiz Nomada/indexRN.html
+++ b/Raiz Nomada/indexRN.html
@@ -119,11 +119,10 @@
     </div>
     </div>
 
-
 <br>
 
-<div class="container">
-<table class="table table-striped bg-white" id="carrito">
+<!-- <div class="container">
+ <table class="table table-striped bg-white" id="carrito">
     <thead>
         <tr>
           <th scope="col">#</th>
@@ -135,19 +134,20 @@
       <tbody class="tbody">
     
       </tbody>
-  </table>
+  </table> -->
+  
+    <br><br>
+    <div class="row mx-4">
+      <div class="col">
+          <h3 id="itemCartTotal">TOTAL: $0</h3>
+      </div>
+     <div class="col d-flex justify-content-end">
+         <button class="btn btn-success">COMPRAR</button>
+     </div>
 
-  <br><br>
-
-<div class="row mx-4">
-    <div class="col">
-        <h3 id="itemCartTotal">TOTAL: $0</h3>
-    </div>
-   <div class="col d-flex justify-content-end">
-       <button class="btn btn-success">COMPRAR</button>
-   </div>
 </div>
 </div>
+
 
 
 
